--- a/EMigrant.App.Frontend/Pages/Index.cshtml
+++ b/EMigrant.App.Frontend/Pages/Index.cshtml
@@ -1,10 +1,17 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home page";  
+    
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Bienvenido Migrante</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div>
+        <label >Tipo de Documento:</label>
+        <input type="text" class="form-control" placeholder="Ingresa Nombres " id="documento_buscar" />
+</div><br>
+<button type="button" class="btn btn-primary ml-3 ">Consultar Migrante</button>
+
