--- a/EMigrant.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/EMigrant.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -6,10 +6,86 @@
     <title>@ViewData["Title"] - EMigrant.App.Frontend</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#">TecnoSolutions</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/Index">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Migrante
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/PaginasMigrante/CrearMigrante">Registrar Migrante</a></li>
+                    <li><a class="dropdown-item" href="/PaginasMigrante/EditarMigrante?migranteId=2">Actualizar Migrante</a></li>
+                    <li><a class="dropdown-item" href="#">Registrar Grupo Familiares</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Grupos Familiares</a></li>
+                    <li><a class="dropdown-item" href="#">Registrar Necesidades</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Novedades</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Historial</a></li>
+                    <li><a class="dropdown-item" href="#">Informar Emergencia</a></li>
+                    <li><a class="dropdown-item" href="#">Evaluar Servicios</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Entidad Colaboradora
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Registrar Entidad</a></li>
+                    <li><a class="dropdown-item" href="#">Actualizar Entidade</a></li>
+                    <li><a class="dropdown-item" href="#">Registrar Oferta de Servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Actualizar Datos de Servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Modificar Servicio</a></li>
+                    <li><a class="dropdown-item" href="#">Autorizar o negar servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Listar Migrantes Apoyados</a></li>
+                    <li><a class="dropdown-item" href="#">Realizar informe Ejecutivo</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Migrante</a></li>
+                    <li><a class="dropdown-item" href="#">Evaluar Migrantes</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Gerencia
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Gestionar Novedades</a></li>
+                    <li><a class="dropdown-item" href="#">Realizar Informe Gerencial</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Emergencias</a></li>
+                    <li><a class="dropdown-item" href="#">Atender Emergencias</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Entidad</a></li>
+                    <li><a class="dropdown-item" href="#">Suspender servicios</a></li>
+                    <li><a class="dropdown-item" href="#">Consultar Necesidades</a></li>
+                    <li><a class="dropdown-item" href="#">Evaluar Entidades</a></li>
+                    <li><a class="dropdown-item" href="#">Enviar Mensajes</a></li>
+                    </ul>
+                </li>                
+                <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                </li>
+                </ul>
+                @* <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>  *@
+            </div>
+            </div>
+        </nav>
+        
+        @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">EMigrant.App.Frontend</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -22,12 +98,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PaginasMigrante/CrearMigrante">Migrante</a>
                         </li>
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>  *@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -44,6 +120,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script type="text/javascript" src="recursos/funciones.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+        crossorigin="anonymous"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
