--- a/EMigrant.App.Frontend/Pages/Index.cshtml
+++ b/EMigrant.App.Frontend/Pages/Index.cshtml
@@ -8,10 +8,17 @@
 <div class="text-center">
     <h1 class="display-4">Bienvenido Migrante</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a class="btn btn-primary" href="/PaginasMigrante/BuscarMigrante?migranteId=4127863" onclick="" role="button">Consultar Migrante</a>
 </div>
+<form method="get">
+<label for=""></label>
+</form>
+@* <form action="">
 <div>
-        <label >Tipo de Documento:</label>
-        <input type="text" class="form-control" placeholder="Ingresa Nombres " id="documento_buscar" />
-</div><br>
-<button type="button" class="btn btn-primary ml-3 ">Consultar Migrante</button>
+    <label class="form-label">No° Documento:</label>
+    <input type="text" class="form-control" name="numeroDocumentoMi" placeholder="Ingresa No° Documento" id="numeroDocumentoMi" runat="server" />
+    <span class="text-danger" ></span>
+</div>
+</form>
+ *@
 
